force-app/main/default/objects/Payment_Big__b/Payment_Big__b.object-meta.xml
<CustomObject>
    <label>Payment Big</label>
    <pluralLabel>Payment Big</pluralLabel>
</CustomObject>