force-app/main/default/objects/Payment_Big__b/fields/context_name__c.field-meta.xml
<CustomField>
    <fullName>context_name__c</fullName>
    <label>context_name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>