force-app/main/default/objects/Payment_Big__b/fields/deposit_date__c.field-meta.xml
<CustomField>
    <fullName>deposit_date__c</fullName>
    <label>deposit_date</label>
    <type>DateTime</type>
</CustomField>