force-app/main/default/objects/Payment_Big__b/fields/payment_amount__c.field-meta.xml
<CustomField>
    <fullName>payment_amount__c</fullName>
    <label>payment_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>