force-app/main/default/objects/Payment_Big__b/fields/payment_id__c.field-meta.xml
<CustomField>
    <fullName>payment_id__c</fullName>
    <label>payment_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>