force-app/main/default/objects/Payment_Big__b/fields/payment_unique_id__c.field-meta.xml
<CustomField>
    <fullName>payment_unique_id__c</fullName>
    <label>payment_unique_id</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
</CustomField>